add two img to source

--- a/core/src/main/resources/templates/core/sidepanel.html
+++ b/core/src/main/resources/templates/core/sidepanel.html
@@ -24,7 +24,7 @@
 
         <li class="accordion">
             <dropdown>
-                <div class="img_n"><img th:src="@{/img/leaf.png}"></div>
+                <div class="img_n"><img th:src="@{/img/habits_white.svg}"></div>
                 <span>[[#{greenCity.sidebar.habits}]]</span>
             </dropdown>
         </li>
