--- a/core/src/main/resources/templates/core/management_general_statistics_for_users.html
+++ b/core/src/main/resources/templates/core/management_general_statistics_for_users.html
@@ -30,6 +30,7 @@
 
 <body>
 <div id="header" th:insert="core/header"></div>
+<div id="sidebar" th:insert="core/sidepanel"></div>
 <div class="main-content">
     <div class="container">
         <h2 align="center">Users city Graph</h2>
