--- a/core/src/main/resources/templates/core/management_places.html
+++ b/core/src/main/resources/templates/core/management_places.html
@@ -34,6 +34,7 @@
 </head>
 <body>
 <div id="header" th:insert="core/header"></div>
+<div id="sidebar" th:insert="core/sidepanel"></div>
 <div class="main-content">
     <div class="container-xl">
         <div class="table-responsive">
